--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<input type="text" id="nama" placeholder="Username">
 		<input type="text" id="text_box" placeholder="Pesan">
 		<button type="submit">Kirim</button>
+		<!-- add reset button -->
+		<button type="reset">Reset</button>
 	</form>
 	
 	<script type="text/javascript">
